@@ -44,6 +44,21 @@ Rev. history : 2018-08-01
 Version : 0.7.2
 	Updated header field setter function.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-03-08
+Version : 0.8.1
+	Removed locator registration function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-05-22
+Version : 0.9.1
+	Add send function with timeout.
+Modifier : Yunho Choi (choiking10@kaist.ac.kr)
 */
 /* -------------------------------------------------------- */
 
@@ -59,15 +74,15 @@ import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-
-import sun.misc.BASE64Decoder;
 
 class MMSSndHandler {
 	
@@ -80,20 +95,21 @@ class MMSSndHandler {
 		this.clientMRN = clientMRN;
 	}
 
-	@Deprecated
-	void registerLocator(int port) throws IOException {
-		isRgstLoc = true;
-		sendHttpPost("urn:mrn:smart-navi:device:mms1", "/registering", port+":2", null);
-	}
-	
 	void setResponseCallback (MMSClientHandler.ResponseCallback callback){
 		this.myCallback = callback;
+	}
+
+	void sendHttpPostWithTimeout(String dstMRN, String loc, String data, Map<String,List<String>> headerField, int timeout) throws IOException  {
+		sendHttpPost(dstMRN, loc, data, headerField, -1, timeout);
 	}
 	
 	void sendHttpPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField) throws IOException  {
 		sendHttpPost(dstMRN, loc, data, headerField, -1);
 	}
 	void sendHttpPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField, int seqNum) throws IOException  {
+		sendHttpPost(dstMRN, loc, data, headerField, seqNum, -1);
+	}
+	void sendHttpPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField, int seqNum, int timeout) throws IOException  {
 		String url = "http://"+MMSConfiguration.MMS_URL; // MMS Server
 		if (!loc.startsWith("/")) {
 			loc = "/" + loc;
@@ -101,18 +117,23 @@ class MMSSndHandler {
 		url += loc;
 		URL obj = new URL(url);
 		HttpURLConnection con = (HttpURLConnection) obj.openConnection();
-		
 		//add request header
 		con.setRequestMethod("POST");
 		con.setRequestProperty("User-Agent", USER_AGENT);
 		con.setRequestProperty("Accept-Charset", "UTF-8");
 		con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
 		con.setRequestProperty("srcMRN", clientMRN);
+		
 		if (dstMRN != null) {
 			con.setRequestProperty("dstMRN", dstMRN);
 		}
 		if (seqNum != -1) {
 			con.setRequestProperty("seqNum", ""+seqNum);
+		}
+		
+		if (timeout > 0) {
+			con.setConnectTimeout(timeout);
+			con.setReadTimeout(timeout);
 		}
 		//con.addRequestProperty("Connection","keep-alive");
 		
@@ -216,14 +237,16 @@ class MMSSndHandler {
 			inputMsg.append(inputLine+"\n");
 		}
 		
-		BASE64Decoder base64Decoder = new BASE64Decoder();
-        InputStream encoded = new ByteArrayInputStream(inputMsg.toString().getBytes("UTF-8"));
-        BufferedOutputStream decoded = new BufferedOutputStream(new FileOutputStream(System.getProperty("user.dir")+fileName));
+		Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] encoded = inputMsg.toString().getBytes("UTF-8");
+        byte[] decoded = null;
 
-        base64Decoder.decodeBuffer(encoded, decoded);      
+        base64Decoder.decode(encoded, decoded);      
 
-        encoded.close();
-        decoded.close();
+        BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(System.getProperty("user.dir")+fileName));
+        
+        bos.write(decoded);
+        bos.close();
 		in.close();
 		return fileName + " is saved";
 	}
@@ -259,7 +282,9 @@ class MMSSndHandler {
 		con.setRequestProperty("User-Agent", USER_AGENT);
 		con.setRequestProperty("Accept-Charset", "UTF-8");
 		con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-		con.setRequestProperty("srcMRN", clientMRN);
+		if (clientMRN != null) {
+			con.setRequestProperty("srcMRN", clientMRN);
+		}
 		if (dstMRN != null) {
 			con.setRequestProperty("dstMRN", dstMRN);
 		}
