@@ -25,6 +25,11 @@ Rev. history : 2018-07-27
 Version : 0.7.2
 	Revised setting header field function.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
 */
 /* -------------------------------------------------------- */
 
@@ -43,6 +48,7 @@ import java.nio.charset.Charset;
 import java.security.KeyStore;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +63,6 @@ import com.sun.net.httpserver.HttpsConfigurator;
 import com.sun.net.httpserver.HttpsParameters;
 import com.sun.net.httpserver.HttpsServer;
 
-import sun.misc.BASE64Encoder;
 
 class SecureMMSRcvHandler {
 	HttpsServer server = null;
@@ -306,7 +311,7 @@ class SecureMMSRcvHandler {
 	        	
 	            fileName = System.getProperty("user.dir")+fileName.trim();
 	            File file = new File (fileName);
-	            BASE64Encoder base64Encoder = new BASE64Encoder();
+	            Base64.Encoder base64Encoder = Base64.getEncoder();
 	            in = new FileInputStream(file);
 	
 	            byteOutStream=new ByteArrayOutputStream();
@@ -320,7 +325,7 @@ class SecureMMSRcvHandler {
 	            }
 	
 	            byte fileArray[]=byteOutStream.toByteArray();
-	            encodeBytes=base64Encoder.encodeBuffer(fileArray).getBytes(); 
+	            encodeBytes=base64Encoder.encode(fileArray);  
         	} finally {
         		if (in != null) {
         			in.close();
