@@ -37,6 +37,16 @@ Rev. history : 2018-08-01
 Version : 0.7.2
 	Updated header field setter function.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-03-08
+Version : 0.8.1
+	Removed locator registration function.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
 */
 /* -------------------------------------------------------- */
 
@@ -56,6 +66,7 @@ import java.nio.charset.Charset;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -64,8 +75,6 @@ import java.util.Set;
 
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.TrustManager;
-
-import sun.misc.BASE64Decoder;
 
 import javax.net.ssl.*;
 
@@ -86,11 +95,7 @@ class SecureMMSSndHandler {
 		this.myCallback = callback;
 	}
 	
-	@Deprecated
-	void registerLocator(int port) throws IOException {
-		isRgstLoc = true;
-		sendHttpsPost("urn:mrn:smart-navi:device:mms1", "/registering", port+":2", null);
-	}
+
 	void sendHttpsPost(String dstMRN, String loc, String data, Map<String,List<String>> headerField) throws IOException{
 		sendHttpsPost(dstMRN, loc, data, headerField, -1);
 	}
@@ -218,14 +223,16 @@ class SecureMMSSndHandler {
 			inputMsg.append(inputLine+"\n");
 		}
 		
-		BASE64Decoder base64Decoder = new BASE64Decoder();
-        InputStream encoded = new ByteArrayInputStream(inputMsg.toString().getBytes("UTF-8"));
-        BufferedOutputStream decoded = new BufferedOutputStream(new FileOutputStream(System.getProperty("user.dir")+fileName));
+		Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] encoded = inputMsg.toString().getBytes("UTF-8");
+        byte[] decoded = null;
 
-        base64Decoder.decodeBuffer(encoded, decoded);      
+        base64Decoder.decode(encoded, decoded);      
 
-        encoded.close();
-        decoded.close();
+        BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(System.getProperty("user.dir")+fileName));
+        
+        bos.write(decoded);
+        bos.close();
 		in.close();
 		return fileName + " is saved";
 	}
@@ -262,7 +269,9 @@ class SecureMMSSndHandler {
 		con.setRequestProperty("User-Agent", USER_AGENT);
 		con.setRequestProperty("Accept-Charset", "UTF-8");
 		con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-		con.setRequestProperty("srcMRN", clientMRN);
+		if (clientMRN != null) {
+			con.setRequestProperty("srcMRN", clientMRN);
+		}
 		if (dstMRN != null) {
 			con.setRequestProperty("dstMRN", dstMRN);
 		}
